--- a/frontend/src/css/chavidu/DashBoard.module.css
+++ b/frontend/src/css/chavidu/DashBoard.module.css
@@ -1,4 +1,4 @@
-/* Dashboard Container */
+
 .dashboardContainer {
     display: flex;
     max-height: 100vh;
@@ -11,11 +11,7 @@
   
   /* Dashboard Content */
   .dashboardContent {
-    flex: 1; /* Take up remaining space */
-    padding: 20px;
+    flex: 1;
     overflow: auto;
   }
   
-  .removeService{
-    margin-top: 100px;
-  }
