--- a/frontend/src/css/chavidu/studioHome.module.css
+++ b/frontend/src/css/chavidu/studioHome.module.css
@@ -1,17 +1,8 @@
-.StudioText {
-  font-family: Arial, sans-serif;
-  font-size: 32px;
-  font-weight: bold;
-  color: #333;
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: 30px;
-}
 
- .fixed-background-section {
+.fixedBackgroundSection {
+  margin-top: 200px;
   display: flex; 
   justify-content: flex-end; 
-  /* align-items: stretch; */
   position: relative; /* Establishes the containing block for absolutely positioned elements */
   height: 600px; /* Maximum height for the background section */
   background-image: url('../../images/chavidu/IMG3.jpg');
@@ -22,17 +13,20 @@
   margin-left: 40px;
   margin-right: 40px;
 }
- .about-content {
+
+.aboutContent {
   position: absolute;
   top: 0; 
   bottom: 0; 
   width: 37%; 
   background-color: white;
+  /* opacity:0.7 ; */
   padding: 20px;
   font-family: 'Roboto', sans-serif;
+  /* overflow: auto; Adds scrollbars if content overflows */
 }
 
-.about-content h3 {
+.aboutContent h3 {
   margin-bottom: 30px;
   font-family: 'Playfair Display', serif;
   font-size: 28px; 
@@ -40,7 +34,7 @@
   color: #212121; 
 }
 
-.about-content p {
+.aboutContent p {
 text-align: justify;
 font-size: 16px; 
 line-height: 1.6; 
@@ -48,7 +42,6 @@ color: #333;
 font-family: 'Faralista';
 }
 
-/*
 .locationContainer {
   display: flex;
   justify-content: space-between;
@@ -58,7 +51,7 @@ font-family: 'Faralista';
   border-radius: 10px;
   margin-left: 40px;
   margin-right: 40px;
-  margin-top: 880px;
+  margin-top: 590px;
 }
 
 .mapContainer {
@@ -84,7 +77,7 @@ font-family: 'Faralista';
   color: #333333; 
 }
 
-.location-icon {
+.locationicon {
   margin-right: 10px;
   color: #363636; 
 }
@@ -102,4 +95,40 @@ font-family: 'Faralista';
   font-weight: bold;
   color: #333333;
 }
- */
+ 
+
+.textContainer{
+  margin-top: 80px;
+}
+.animatedText {
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #d7d7d7 0%,
+    #858585 20%,
+    #171717 40%,
+    #252525 60%,
+    #7d7d7d 80%,
+    #d7d7d7 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 2rem; /* Adjust font size as needed */
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+html {
+  scroll-behavior: smooth;
+}
