--- a/frontend/src/css/Devinda/eventForm.module.css
+++ b/frontend/src/css/Devinda/eventForm.module.css
@@ -5,6 +5,7 @@
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
+  background-color: aqua;
 }
 
 .formTitle {
@@ -26,7 +27,7 @@
 }
 
 .submitButton {
-  background-color: #007bff;
+  background-color: #0f55a0;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -35,5 +36,10 @@
 }
 
 .submitButton:hover {
-  background-color: #0056b3;
+  background-color: #18c669;
+}
+
+.Eventform{
+  background-color: #347dcb;
+
 }
