--- a/frontend/src/css/Devinda/packages.module.css
+++ b/frontend/src/css/Devinda/packages.module.css
@@ -1,13 +1,15 @@
-/* Packages.css */
-/* want */
+
 .packagesContainer {
   padding: 20px;
   background-size: cover;
   background-position: center;
+  background-color: #ffffff;
 }
 
 .searchContainer {
   margin-bottom: 20px;
+  
+  
 }
 
 .searchInput {
@@ -19,11 +21,20 @@
 }
 
 .packageItem {
+  margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 30%;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #d8d8d8;
   border-radius: 5px;
+  max-width: 40vw;
+  transition: background-color 0.3s ease; /* Add transition for smooth effect */
 }
+
+.packageItem:hover {
+  background-color: #9c9b96; /* Change background color on hover */
+}
+
 
 .packageName {
   font-size: 24px;
@@ -77,4 +88,76 @@
 
 .customizeButton:hover {
   background-color: #218838;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+.slideshowContainer {
+  width: 100vw;
+  height: 60vh;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+}
+
+.slide {
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+/* Fade animation */
+@keyframes fade {
+  from { opacity: 0.4; }
+  to { opacity: 1; }
+}
+
+/* Apply animation to slides */
+.slide.fade {
+  animation: fade 1.5s ease-in-out infinite alternate;
+}
+
+/* Set initial opacity for first slide */
+.slide:first-child {
+  display: block;
+}
+
+
+.textContainer{
+  margin-top: 0px;
+  background-color: #ffffff;
+}
+.animatedText {
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #d7d7d7 0%,
+    #858585 20%,
+    #171717 40%,
+    #252525 60%,
+    #7d7d7d 80%,
+    #d7d7d7 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-size: 2rem; /* Adjust font size as needed */
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+html {
+  scroll-behavior: smooth;
 }
